REFLECTION-326: Fix Json writer formatting and sensor analyzer test and add sensor export tests